--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,3 +25,9 @@ unbind-key h
 bind-key h split-window
 
 set -sg terminal-overrides ",*:RGB"
+
+set-option -g window-status-current-format "#[bg=#698DDA,fg=#000000] #I:#W#{?window_zoomed_flag, 󰊓 , }"
+set-option -g status-left "#[bg=default,fg=default,bold]#{?client_prefix,, tmux }#[bg=#698DDA,fg=black,bold]#{?client_prefix, tmux ,}"
+set-option -g status-style bg=default,fg=default
+set-option -g status-right "#S"
+set-option -g window-status-format " #I:#W "
